manifests/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microcert
  namespace: microcert
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microcert
  template:
    metadata:
      labels:
        app: microcert
    spec:
      containers:
        - command: ["python3.11", "app.py", "-c", "/etc/microcert/config/ca.crt", "-k", "/etc/microcert/config/ca.key", "-t", "/etc/microcert/config/token"]
          image: quay.io/nasx/microcert:latest
          name: pywsgi
          ports:
            - containerPort: 5000
              name: pywsgi
          resources:
            limits:
              cpu: '1'
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
          volumeMounts:
            - mountPath: /etc/microcert/config
              name: config-volume
      volumes:
        - name: config-volume
          secret:
            secretName: config
