manifests/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microcert
  name: microcert
  namespace: microcert
spec:
  ports:
    - name: pywsgi
      port: 5000
      protocol: TCP
      targetPort: pywsgi
  selector:
    app: microcert
